--- a/index.html
+++ b/index.html
@@ -3,29 +3,67 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
-    <!-- Don't forget to link your CSS file! -->
+    <style>
+      h1 {
+        text-align: center;
+      }
+      nav a {
+        text-align: center;
+        color: grey;
+        padding: 10px 10px;
+      }
+    </style>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header>
+  
       <!-- logo -->
       <h1>Exceptional Realty Group</h1>
 
       <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        <a href="#">About</a>
+        <a href="#">New Properties</a>
+        <a href="#">Listings</a>
+        <a href="#">Market Report</a>
+        <a href="#">Contact</a>
+        <a href="#">H.U.D.</a>
       </nav>
     </header>
 
     <section id="featured-property">
-      <figure>
+      <style>
+        img {
+          display: block;
+          max-width: 100%;
+          margin: auto;
+          width: 50%;
+        }
+        </style>
+        <figure>
         <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
         <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
       </figure>
-
+      <style>
+        p {
+         width: 800px;
+         margin: auto;
+         text-align: center;
+        }
+      </style>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
     </section>
 
     <section id="details">
+      <style>
+        div {
+          background-color: beige;
+          width: 25%;
+          float: left;
+          margin: 0 auto;
+          text-align: center;
+        }
+      </style>
       <div>
         <h3>Contact</h3>
         <p>
